<resources>
    <string name="app_name">EDUKID</string>
    <string name="enterName">Prénom</string>
    <string name="valid">Valider</string>
    <string name="applicationName">Kakid</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="lettres">Lettres</string>
    <string name="general">Général</string>
    <string name="chiffres">Chiffres</string>
    <string name="importer">Importer</string>

    <string-array name="alphabet">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string-array name="syllable">
        <item>ON</item>
        <item>OU</item>
        <item>LI</item>
        <item>VA</item>
        <item>MA</item>
        <item>TO</item>
        <item>PU</item>
        <item>BA</item>
        <item>ME</item>
        <item>RI</item>
        <item>TU</item>
        <item>VI</item>
        <item>RA</item>
        <item>AN</item>
        <item>PO</item>
        <item>CH</item>
        <item>PH</item>
        <item>AI</item>
        <item>OI</item>
        <item>EI</item>
        <item>EN</item>
    </string-array>

    <string-array name="difficulty1">
        <item>LI</item>
        <item>VA</item>
        <item>MA</item>
        <item>TO</item>
        <item>PU</item>
        <item>BA</item>
        <item>ME</item>
        <item>RI</item>
        <item>TU</item>
        <item>VI</item>
        <item>RA</item>
        <item>PO</item>
    </string-array>

    <string-array name="difficulty2">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Z</item>
    </string-array>

    <string-array name="difficulty3">
        <item>AN</item>
        <item>ON</item>
        <item>OU</item>
        <item>AI</item>
        <item>OI</item>
    </string-array>

    <string-array name="difficulty4">
        <item>Q</item>
        <item>G</item>
        <item>Y</item>
        <item>H</item>
        <item>CH</item>
        <item>PH</item>
        <item>EI</item>
        <item>EN</item>
    </string-array>


    <array name="preloaded_fonts" translatable="false">
        <item>@font/magimt</item>
        <item>@font/abstractgroovy</item>
        <item>@font/autography</item>
        <item>@font/cream_cake</item>
        <item>@font/kg_second_chances</item>
        <item>@font/little_comet</item>
        <item>@font/sticky_notes</item>
        <item>@font/stop_bullying</item>
    </array>
</resources>